--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,7 +195,6 @@ jobs:
         run: |
           wheel_name=`echo dist/*.whl`
           pip install -q --force-reinstall ${wheel_name}[doc] > /dev/null
-          pip freeze
 
       - name: Build HTML
         run: |
@@ -251,6 +250,10 @@ jobs:
         run: |
           wheel_name=`echo dist/*.whl`
           pip install -q --force-reinstall ${wheel_name}[doc] > /dev/null
+
+      - name: DEBUG - Check Package Versions
+        run: |
+          pip freeze
 
       - name: DEBUG - Surface Docker Error
         run: |
