Sync pre-commit config with pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,8 @@ doc = [
 	"ansys-dpf-core",
 ]
 style = [
-	"codespell==2.3.0",
+	# NB: ensure these remain synced with .pre-commit-config.yaml
+	"codespell==2.3.0", 
 	"flake8==7.1.0",
 ]
 tests = [
