--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "PySystemCoupling documentation style checks"
         uses: ansys/actions/doc-style@v6
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           vale-version: "3.4.1"
 
   style:
@@ -78,8 +78,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          username: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
       - name: Generate API for v231
         uses: ./.github/actions/generate-api
@@ -144,7 +144,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
       - name: Unit Test v23.1.0
         uses: ./.github/actions/unit-test
