--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
-  DOC_BUILD_SYC_VERSION: 24_1
+  DOC_BUILD_SYC_VERSION: 24_2
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -29,7 +29,7 @@ jobs:
       - name: "PySystemCoupling documentation style checks"
         uses: ansys/actions/doc-style@v6
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           vale-version: "3.4.1"
 
   style:
@@ -78,8 +78,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          username: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
       - name: Generate API for v231
         uses: ./.github/actions/generate-api
@@ -144,7 +144,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
       - name: Unit Test v23.1.0
         uses: ./.github/actions/unit-test
@@ -162,13 +162,13 @@ jobs:
         uses: ./.github/actions/unit-test
         with:
           image-tag: v24.1.0
-          upload-coverage: true
+          upload-coverage: false
 
       - name: Unit Test v24.2.0
         uses: ./.github/actions/unit-test
         with:
           image-tag: v24.2.0
-          upload-coverage: false
+          upload-coverage: true
 
 
   docs:
