--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,8 +73,9 @@ doc = [
 	"sphinxemoji==0.3.1",
 
 	# pyansys dependencies for sphinx gallery examples
-	"ansys-fluent-core",
-	"ansys-dpf-core",
+	"ansys-fluent-core==0.21.0",
+	"ansys-dpf-core==0.12.2",
+	"ansys-mapdl-core==0.68.3",
 ]
 style = [
 	# NB: ensure these remain synced with .pre-commit-config.yaml
