--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
   DOC_BUILD_SYC_VERSION: 24_1
   FLUENT_IMAGE_VERSION: "v24.2.0"
-  SYC_IMAGE_VERSION: "latest"
+  SYC_IMAGE_VERSION: "v24.2.0"
   MAPDL_IMAGE_VERSION: "v24.2-ubuntu"
 
 concurrency:
