--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,11 +261,20 @@ jobs:
 
       - name: Pull Required Docker Images
         run: |
-          chmod +x .ci/pull_gallery_images.sh
-          .ci/pull_gallery_images.sh
+          echo "Pulling pysystem-coupling Image Version ${SYC_IMAGE_VERSION}"
+          echo "Pulling pyfluent Image Version ${FLUENT_IMAGE_VERSION}"
+          echo "Pulling mapdl Image Version ${MAPDL_IMAGE_VERSION}"
+          
+          docker pull ghcr.io/ansys/pysystem-coupling:${SYC_IMAGE_VERSION} &
+          docker pull ghcr.io/ansys/pyfluent:${FLUENT_IMAGE_VERSION} &
+          docker pull ghcr.io/ansys/mapdl:${MAPDL_IMAGE_VERSION} &
+          
+          # Wait for the background processes to finish
+          wait
         env:
           SYC_IMAGE_VERSION: ${{ env.SYC_IMAGE_VERSION }}
           FLUENT_IMAGE_VERSION: ${{ env.FLUENT_IMAGE_VERSION }}
+          MAPDL_IMAGE_VESRION: ${{ env.MAPDL_IMAGE_VERSION }}
 
       - name: Start MAPDL Container
         working-directory: examples/00-systemcoupling
