--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,11 @@ jobs:
         with:
           image-tag: v24.2.0
 
+      - name: Generate API for latest
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: latest
+
       - name: Clean out dist
         run: rm -rf dist
 
@@ -168,8 +173,15 @@ jobs:
         uses: ./.github/actions/unit-test
         with:
           image-tag: v24.2.0
-          upload-coverage: true
+          upload-coverage: false
 
+      - name: Unit Test latest
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: latest
+          upload-coverage: true
+        env:
+          ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
 
   docs:
     name: Build Documentation
