--- a/doc/Makefile
+++ b/doc/Makefile
@@ -23,7 +23,7 @@ help:
 # customized clean due to examples gallery
 clean:
 	rm -rf $(BUILDDIR)/*
-	#rm -rf $(SOURCEDIR)/examples
+	rm -rf $(SOURCEDIR)/examples
 	find . -type d -name "_autosummary" -exec rm -rf {} +
 
 # Create PDF
