--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,6 +204,11 @@ jobs:
           name: ${{ env.PACKAGE_NAME }}-artifacts
           path: dist
 
+      - name: Install OS packages
+        run: |
+          sudo apt update 
+          sudo apt install zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex texlive-fonts-extra qpdf xindy
+ 
       - name: Install pysystemcoupling with doc dependencies
         run: |
           wheel_name=`echo dist/*.whl`
