--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
         with:
           name: ${{ env.PACKAGE_NAME }}-artifacts
           path: dist
-
+ 
       - name: Install pysystemcoupling with doc dependencies
         run: |
           wheel_name=`echo dist/*.whl`
@@ -249,15 +249,15 @@ jobs:
           PYMAPDL_START_INSTANCE: FALSE
           DOCKER_IMAGE: ghcr.io/ansys/mapdl:v24.2-ubuntu
 
-      - name: Build PDF Documentation
-        run: |
-          sudo apt update
-          sudo apt-get install -y texlive-latex-extra latexmk
-          make -C doc pdf SPHINXERRWARN=""
-        env:
-          PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
-          extra_mem_bot: 20000000
-          extra_mem_top: 30000000
+      #- name: Build PDF Documentation
+      #  run: |
+      #    sudo apt update
+      #    sudo apt-get install -y texlive-latex-extra latexmk
+      #    make -C doc pdf SPHINXERRWARN=""
+      #  env:
+      #    PYSYC_DOC_BUILD_VERSION: ${{ env.DOC_BUILD_SYC_VERSION }}
+      #    extra_mem_bot: 20000000
+      #    extra_mem_top: 30000000
 
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v4
