--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "ansys-api-systemcoupling==0.2.0",
     "ansys-platform-instancemanagement~=1.0",
     "grpcio>=1.30.0",
-    "grpcio-status>=1.30.0,<1.66.3",
+    "grpcio-status>=1.30.0",
     "googleapis-common-protos>=1.50.0",
     "psutil>=5.7.0",
     "pyyaml",
