--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ doc = [
 	"numpydoc==1.8.0",
 	"pypandoc==1.15",
 	"pytest-sphinx==0.6.3",
-	"Sphinx==8.1.3",
+	"sphinx>=8.1.3",
 	"sphinx-autobuild==2024.10.3",
 	"sphinx-autodoc-typehints==3.1.0",
 	"sphinx-copybutton==0.5.2",
