--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,19 +52,19 @@ classesgen = [
 	# black and isort are called programmatically to keep generated code
 	# consistent with style elsewhere. We need to keep these versions in
 	# sync with the precommit dependencies.
-	"black==24.10.0",
+	"black==25.1.0",
 	"isort==6.0.0",
 ]
 doc = [
-	"ansys-sphinx-theme==1.2.6",
+	"ansys-sphinx-theme==1.3.2",
 	"jupyter_sphinx==0.5.3",
 	"matplotlib",
 	"numpydoc==1.8.0",
 	"pypandoc==1.15",
 	"pytest-sphinx==0.6.3",
-	"Sphinx==8.1.3",
+	"sphinx>=8.1.3",
 	"sphinx-autobuild==2024.10.3",
-	"sphinx-autodoc-typehints==3.0.1",
+	"sphinx-autodoc-typehints==3.1.0",
 	"sphinx-copybutton==0.5.2",
 	"sphinx-gallery==0.19.0",
 	"sphinx-notfound-page==1.1.0",
@@ -79,7 +79,7 @@ doc = [
 style = [
 	# NB: ensure these remain synced with .pre-commit-config.yaml
 	"codespell==2.4.1",
-	"flake8==7.1.1",
+	"flake8==7.1.2",
 ]
 tests = [
 	"pytest",
