--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,11 @@ jobs:
         with:
           image-tag: v24.2.0
 
+      - name: Generate API for v251
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v25.1.0
+
       - name: Generate API for latest
         uses: ./.github/actions/generate-api
         with:
