--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
-  DOC_BUILD_SYC_VERSION: 24_2
+  DOC_BUILD_SYC_VERSION: 25_1
   FLUENT_IMAGE_VERSION: "v24.2.0"
-  SYC_IMAGE_VERSION: "v24.2.0"
+  SYC_IMAGE_VERSION: "v25.1.0"
   MAPDL_IMAGE_VERSION: "v24.2-ubuntu"
 
 concurrency:
@@ -104,6 +104,11 @@ jobs:
         with:
           image-tag: v24.2.0
 
+      - name: Generate API for v251
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v25.1.0
+
       - name: Generate API for latest
         uses: ./.github/actions/generate-api
         with:
@@ -178,11 +183,19 @@ jobs:
           image-tag: v24.2.0
           upload-coverage: false
 
+      - name: Unit Test v25.1.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v25.1.0
+          upload-coverage: true
+        env:
+          ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
+
       - name: Unit Test latest
         uses: ./.github/actions/unit-test
         with:
           image-tag: latest
-          upload-coverage: true
+          upload-coverage: false
         env:
           ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
 
@@ -247,7 +260,7 @@ jobs:
           FLUENT_IMAGE_TAG: ${{ env.FLUENT_IMAGE_VERSION }}
           PYMAPDL_START_INSTANCE: FALSE
           PYMAPDL_PORT: "50053"
-          DOCKER_IMAGE: ghcr.io/ansys/mapdl:v24.2-ubuntu
+          DOCKER_IMAGE: ghcr.io/ansys/mapdl:${{ env.MAPDL_IMAGE_VERSION }}
 
       #- name: Build PDF Documentation
       #  run: |
