--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -3,7 +3,7 @@
   color: d42a34
 
 - name: dependencies
-  description: Related with project dependencies
+  description: Related to project dependencies
   color: ffc0cb
 
 - name: documentation
@@ -29,7 +29,11 @@
 - name: testing
   description: Involves the development of new unit/functional tests
   color: bfe5bf
-  
+
 - name: major
   description: Major issue which may have to be subdivided into smaller ones
   color: 5319e7
+
+- name: CI/CD
+  description: "Related to CICD, Github Actions, etc"
+  color: f9e79f
