--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
-  DOC_BUILD_SYC_VERSION: 25_1
+  DOC_BUILD_SYC_VERSION: 25_2
   FLUENT_IMAGE_VERSION: "v25.1.0"
-  SYC_IMAGE_VERSION: "v25.1.0"
+  SYC_IMAGE_VERSION: "latest"
   MAPDL_IMAGE_VERSION: "v25.1-ubuntu"
 
 concurrency:
