--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ env:
   PACKAGE_NAME: "ansys-systemcoupling-core"
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
-  DOC_BUILD_SYC_VERSION: 25_1
-  FLUENT_IMAGE_VERSION: "v24.2.0"
-  SYC_IMAGE_VERSION: "v25.1.0"
-  MAPDL_IMAGE_VERSION: "v24.2-ubuntu"
+  DOC_BUILD_SYC_VERSION: 25_2
+  FLUENT_IMAGE_VERSION: "v25.1.0"
+  SYC_IMAGE_VERSION: "latest"
+  MAPDL_IMAGE_VERSION: "v25.1-ubuntu"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
