--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,10 +109,15 @@ jobs:
         with:
           image-tag: v25.1.0
 
-      - name: Generate API for latest
+      - name: Generate API for v252
         uses: ./.github/actions/generate-api
         with:
-          image-tag: latest
+          image-tag: v25.2.0
+
+      #- name: Generate API for latest
+      #  uses: ./.github/actions/generate-api
+      #  with:
+      #    image-tag: latest
 
       - name: Clean out dist
         run: rm -rf dist
@@ -187,17 +192,25 @@ jobs:
         uses: ./.github/actions/unit-test
         with:
           image-tag: v25.1.0
+          upload-coverage: false
+        env:
+          ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
+
+      - name: Unit Test v25.2.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v25.2.0
           upload-coverage: true
         env:
           ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
 
-      - name: Unit Test latest
-        uses: ./.github/actions/unit-test
-        with:
-          image-tag: latest
-          upload-coverage: false
-        env:
-          ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
+      #- name: Unit Test latest
+      #  uses: ./.github/actions/unit-test
+      #  with:
+      #    image-tag: latest
+      #    upload-coverage: false
+      #  env:
+      #    ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
 
   docs:
     name: Build Documentation
