revert everything back to 23/6/25 (440a47ffb)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
   DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
   DOC_BUILD_SYC_VERSION: 25_2
-  FLUENT_IMAGE_VERSION: "v25.2.0"
+  FLUENT_IMAGE_VERSION: "v25.1.0"
   SYC_IMAGE_VERSION: "latest"
   MAPDL_IMAGE_VERSION: "v25.1-ubuntu"
 
@@ -187,7 +187,7 @@ jobs:
         uses: ./.github/actions/unit-test
         with:
           image-tag: v25.1.0
-          upload-coverage: false # Disable for now as upload is rate limited
+          upload-coverage: true
         env:
           ANSYSLMD_LICENSE_FILE: "1055@${{ secrets.LICENSE_SERVER }}"
 
