--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
           token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           python-package-name: ${{ env.PACKAGE_NAME }}
-          dev-mode: ${{ github.ref != "refs/heads/main" }}
+          dev-mode: ${{ github.ref != 'refs/heads/main' }}
           #upload-reports: True
           #hide-log: false
 
