try adding 'packages: read' permission

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -252,6 +252,8 @@ jobs:
     runs-on: public-ubuntu-latest-8-cores
     permissions:
       contents: write
+      packages: read
+
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
