--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,16 @@ concurrency:
 
 jobs:
 
-  # actions-security:
-  #   name: "Check actions security"
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: ansys/actions/check-actions-security@c2fa7c93f6883114e0e643599431b33d29f0b13f # v10.1.4
-  #       with:
-  #         generate-summary: true
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         auditing-level: 'high'
-  #         trust-ansys-actions: true
+  actions-security:
+    name: "Check actions security"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ansys/actions/check-actions-security@c2fa7c93f6883114e0e643599431b33d29f0b13f # v10.1.4
+        with:
+          generate-summary: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          auditing-level: 'high'
+          trust-ansys-actions: true
 
   doc-style:
     name: "Documentation style check"
