--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -382,7 +382,7 @@ jobs:
         with:
           repository-url: "https://upload.pypi.org/legacy/"
           print-hash: true
-          packages-dir: ${{ env.PACKAGE_NAMEt }}-artifacts
+          packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
           skip-existing: false
 
       - name: "Release to GitHub"
